examples/checkpanic/checkpanic.out
# To run this sample, navigate to the directory that contains the
# `.bal` file, and execute the `ballerina run` command.
$ ballerina run checkpanic.bal
120
error: {ballerina}ConversionError {"message":"incompatible convert operation: 'string' value 'Invalid' cannot be converted as 'int'"}
        at ballerina/utils:simpleValueConvert(<native>)
           parse(checkpanic.bal:5)
           main(checkpanic.bal:19)
